[gd_scene load_steps=6 format=3 uid="uid://dpos10i8hldil"]

[ext_resource type="Texture2D" uid="uid://ysy5wbywwfi6" path="res://icon.svg" id="1_eb6g5"]
[ext_resource type="Script" uid="uid://mcd3ym5ghtfd" path="res://different_enemy.gd" id="1_fxppo"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fxppo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_eb6g5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_phgdb"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n14kb"]
size = Vector2(16, 16)

[node name="differentEnemy" type="CharacterBody2D"]
script = ExtResource("1_fxppo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(9.53674e-07, -4.76837e-07)
scale = Vector2(0.125, 0.125)
sprite_frames = SubResource("SpriteFrames_fxppo")

[node name="hitbox" type="Area2D" parent="."]

[node name="hitbox" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("RectangleShape2D_phgdb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n14kb")

[node name="hp_full" type="ColorRect" parent="."]
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = -9.0
color = Color(1, 0, 0, 1)

[node name="hp_dyn" type="ColorRect" parent="."]
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = -9.0
color = Color(0, 1, 0, 1)

[node name="i_timer" type="Timer" parent="."]

[node name="i_indicator" type="ColorRect" parent="."]
visible = false
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
color = Color(0, 0, 0, 0.439216)

[node name="debug" type="RichTextLabel" parent="."]
offset_right = 64.0
offset_bottom = 24.0

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
